@@ -464,7 +464,7 @@ bsp_tex_internal:
 		if (!strncmp(mt->name,"sky",3))
 			R_InitSky (tx);
 		else
-			tx->gl_texturenum = GL_LoadTexture (mt->name, tx->width, tx->height, (byte *)(tx+1), true, false, 0, false);
+			tx->gl_texturenum = GL_LoadTexture (mt->name, (byte *)(tx+1), tx->width, tx->height, TEX_MIPMAP);
 	}
 
 //
@@ -591,7 +591,7 @@ void Mod_ReloadTextures (void)
 				if (!strncmp(tx->name, "sky", 3))
 					R_InitSky(tx);
 				else
-					tx->gl_texturenum = GL_LoadTexture (tx->name, tx->width, tx->height, (byte *)(tx+1), true, false, 0, false);
+					tx->gl_texturenum = GL_LoadTexture (tx->name, (byte *)(tx+1), tx->width, tx->height, TEX_MIPMAP);
 			}
 		}
 	}
@@ -1887,14 +1887,13 @@ static void *Mod_LoadAllSkins (int numskins, daliasskintype_t *pskintype, int md
 
 	s = pheader->skinwidth * pheader->skinheight;
 
-	if (mdl_flags & EF_HOLEY)
-		tex_mode = 2;
-	else if (mdl_flags & EF_TRANSPARENT)
-		tex_mode = 1;
+	tex_mode = TEX_DEFAULT | TEX_MIPMAP;
+	if (mdl_flags & EF_TRANSPARENT)
+		tex_mode |= TEX_TRANSPARENT;
+	else if (mdl_flags & EF_HOLEY)
+		tex_mode |= TEX_HOLEY;
 	else if (mdl_flags & EF_SPECIAL_TRANS)
-		tex_mode = 3;
-	else
-		tex_mode = 0;
+		tex_mode |= TEX_SPECIAL_TRANS;
 
 	for (i = 0; i < numskins; i++)
 	{
@@ -1941,13 +1940,11 @@ static void *Mod_LoadAllSkins (int numskins, daliasskintype_t *pskintype, int md
 			}
 
 			q_snprintf (name, sizeof(name), "%s_%i", loadmodel->name, i);
-
 			pheader->gl_texturenum[i][0] =
 			pheader->gl_texturenum[i][1] =
 			pheader->gl_texturenum[i][2] =
-			pheader->gl_texturenum[i][3] =
-					GL_LoadTexture (name, pheader->skinwidth, 
-						pheader->skinheight, (byte *)(pskintype + 1), true, false, tex_mode, false);
+			pheader->gl_texturenum[i][3] = GL_LoadTexture (name, (byte *)(pskintype + 1),
+							pheader->skinwidth, pheader->skinheight, tex_mode);
 			pskintype = (daliasskintype_t *)((byte *)(pskintype+1) + s);
 		}
 		else
@@ -1959,16 +1956,15 @@ static void *Mod_LoadAllSkins (int numskins, daliasskintype_t *pskintype, int md
 			pinskinintervals = (daliasskininterval_t *)(pinskingroup + 1);
 
 			pskintype = (daliasskintype_t *)(pinskinintervals + groupskins);
-
 			for (j = 0; j < groupskins; j++)
 			{
 				Mod_FloodFillSkin (skin, pheader->skinwidth, pheader->skinheight);
 				q_snprintf (name, sizeof(name), "%s_%i_%i", loadmodel->name, i, j);
-				pheader->gl_texturenum[i][j&3] = 
-					GL_LoadTexture (name, pheader->skinwidth, 
-						pheader->skinheight, (byte *)(pskintype), true, false, tex_mode, false);
+				pheader->gl_texturenum[i][j&3] = GL_LoadTexture (name, (byte *)(pskintype),
+							pheader->skinwidth, pheader->skinheight, tex_mode);
 				pskintype = (daliasskintype_t *)((byte *)(pskintype) + s);
 			}
+
 			k = j;
 			for ( ; j < 4; j++)
 				pheader->gl_texturenum[i][j&3] = pheader->gl_texturenum[i][j - k];
@@ -2613,7 +2609,7 @@ static void *Mod_LoadSpriteFrame (void *pin, mspriteframe_t **ppframe, int frame
 	pspriteframe->right = width + origin[0];
 
 	q_snprintf (name, sizeof(name), "%s_%i", loadmodel->name, framenum);
-	pspriteframe->gl_texturenum = GL_LoadTexture (name, width, height, (byte *)(pinframe + 1), true, true, 0, false);
+	pspriteframe->gl_texturenum = GL_LoadTexture (name, (byte *)(pinframe + 1), width, height, TEX_MIPMAP | TEX_ALPHA);
 
 	return (void *)((byte *)pinframe + sizeof (dspriteframe_t) + size);
 }
